@startumlclassDiagram
             namespace Common {
                 class Rotation {
                     <<record>>
                     -char direction
                     -int distance
                     +from(instruction: String)$ Rotation
                 }
             }

             namespace Part_B {
                 class Dial {
                     <<record>>
                     -int currentPosition
                     -int passwordScore
                     +initial()$ Dial
                     +rotate(rotation: Rotation) Dial
                     -calculateNextPosition(rotation: Rotation) int
                     -countZeroPassages(rotation: Rotation) long
                 }

                 class Safe {
                     <<Funcional Pura>>
                     +decodePassword(document: Stream~String~)$ int
                 }

                 class Main {
                     +main(args: String[])$ void
                 }
             }

             Safe ..> Rotation : Mapea (from)
             Safe ..> Dial : Reduce (initial, rotate)
             Dial ..> Rotation : Consume
             Main ..> Safe : Orquesta

@enduml